--- a/index.couvert.html
+++ b/index.couvert.html
@@ -289,11 +289,12 @@ async function fetchPagamentos(){
   }));
 }
 
-/* ABC: totais da COLUNA G (linhas “Total por Data”) — usa ini-1 no servidor
-   para garantir inclusão do 1º dia; no cliente, filtro inclusivo. */
+/* ABC: totais da COLUNA G (linhas “Total por Data”)
+   → pede até FIM+1D para garantir inclusão do último dia.
+   → no cliente filtra inclusivo [aIni, aFim]. */
 async function fetchABC(ini, fim){
-  const qIni = ini ? addDays(ini, -1) : null;
-  const qFim = fim ? new Date(fim) : null;
+  const qIni = ini ? new Date(ini) : null;
+  const qFim = fim ? addDays(fim, 1) : null; // *** aqui o ajuste ***
   const qs = (qIni && qFim) ? `?ini=${toISODate(qIni)}&fim=${toISODate(qFim)}` : "";
   let r = await fetch(ABC_URL + qs);
   if(!r.ok && qs){ r = await fetch(ABC_URL); }
@@ -317,12 +318,12 @@ async function fetchABC(ini, fim){
   abcLoaded = true;
 }
 
-/*** EMPRESAS / CHIPS (agora multi-seleção) ***/
+/*** EMPRESAS / CHIPS — modo original (uma empresa por vez ou Todas) ***/
 function coletarEmpresas(){
   const a = pagamentosAll.map(p=>p.empresa);
   const b = abcAll.map(x=>x.empresa).filter(Boolean);
   empresas = uniq(a.concat(b));
-  if (empresasSelecionadas.size === 0) empresasSelecionadas = new Set(empresas);
+  if (empresasSelecionadas.size === 0) empresasSelecionadas = new Set(empresas); // padrão: Todas
 }
 function sumArrecadacaoEmpresa(emp){
   return abcAll
@@ -338,31 +339,16 @@ function renderChips(){
   const allActive=(empresasSelecionadas.size===empresas.length);
   cTodas.className="chip"+(allActive?" active":"");
   cTodas.textContent="Todas";
-  cTodas.onclick=()=>{
-    // alterna: se já estava “todas”, limpa; senão seleciona todas
-    if(empresasSelecionadas.size===empresas.length){
-      empresasSelecionadas.clear();
-    }else{
-      empresasSelecionadas=new Set(empresas);
-    }
-    // nunca deixar vazio – vazio trata como “todas”
-    if(empresasSelecionadas.size===0) empresasSelecionadas=new Set(empresas);
-    renderChips(); aplicar();
-  };
+  cTodas.onclick=()=>{empresasSelecionadas=new Set(empresas); renderChips(); aplicar();};
   host.appendChild(cTodas);
 
   empresas.forEach(e=>{
     const c=document.createElement("span");
-    const isActive=empresasSelecionadas.has(e);
+    const isActive=(empresasSelecionadas.size===1 && empresasSelecionadas.has(e));
     c.className="chip"+(isActive?" active":"");
     const amt=sumArrecadacaoEmpresa(e);
     c.innerHTML=`<span>${e}</span>${Number.isFinite(amt)? "<span class='amt'>"+brl(amt)+"</span>":"<span class='dash'>—</span>"}`;
-    c.onclick=()=>{
-      if(empresasSelecionadas.has(e)) empresasSelecionadas.delete(e);
-      else empresasSelecionadas.add(e);
-      if(empresasSelecionadas.size===0) empresasSelecionadas=new Set(empresas);
-      renderChips(); aplicar();
-    };
+    c.onclick=()=>{empresasSelecionadas=new Set([e]); renderChips(); aplicar();};
     host.appendChild(c);
   });
 }
@@ -523,7 +509,7 @@ function aplicar(){
   $("#lblAR").textContent = fmtRange(aIni,aFim);
 }
 
-/*** Aplicar filtros (calendários) ***/
+/*** Aplicar filtros ***/
 async function applyFilters(){
   $("#popPR").style.display = 'none';
   $("#popAR").style.display = 'none';
@@ -622,9 +608,9 @@ function placePopover(pop, anchor){
 document.addEventListener('click', (e)=>{
   const pr=$("#popPR"), ar=$("#popAR");
   const bpr=$("#btnPR"), bar=$("#btnAR");
-  const clickInside = (el)=> el && el.contains(e.target);
+  const inside = (el)=> el && el.contains(e.target);
   if( (pr.style.display==='block' || ar.style.display==='block') &&
-      !clickInside(pr) && !clickInside(ar) && !clickInside(bpr) && !clickInside(bar) ){
+      !inside(pr) && !inside(ar) && !inside(bpr) && !inside(bar) ){
     pr.style.display='none'; ar.style.display='none';
   }
 });
